# OS-labs-template-Tert

./: .gitignore  CMakeLists.txt  README.md
lab01/: 1.doc  CMakeLists.txt
lab01/include/: parent.h  utils.h
lab01/src/: child.cpp  parent.cpp  utils.cpp
lab02/: 2.doc  CMakeLists.txt  main.cpp
lab02/include/: gauss.h
lab02/src/: gauss.cpp
lab03/: 3.doc  CMakeLists.txt  main.cpp
lab03/include/: parent.h  utils.h
lab03/src/: child.cpp  parent.cpp  utils.cpp
lab04/: 4.doc  CMakeLists.txt
lab04/include/: library.h
lab04/src/: main_compile_time.cpp  main_runtime.cpp  sort_bubble.cpp  sort_quick.cpp  translation_binary.cpp  translation_ternary.cpp
lab57/: 5-7.doc  CMakeLists.txt  main.cpp
lab57/include/: compute_node.h  manager.h  utils.h
lab57/src/: compute_node.cpp  manager.cpp
lab8/: 8.doc
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab57_test.cpp
